@@ -223,6 +223,7 @@
                                 --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
                                 --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                                 --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                                 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                                 --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
@@ -242,6 +243,9 @@
                                 --add-opens=java.base/sun.security.x509=ALL-UNNAMED
                                 --add-opens=java.base/sun.net.util=ALL-UNNAMED
                                 --add-opens=java.sql/java.sql=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.text=ALL-UNNAMED
+                                --add-opens java.desktop/java.awt.font=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
@@ -253,6 +257,7 @@
                                 <jvmArg>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</jvmArg>
@@ -272,6 +277,9 @@
                                 <jvmArg>--add-opens=java.base/sun.security.x509=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.base/sun.net.util=ALL-UNNAMED</jvmArg>
                                 <jvmArg>--add-opens=java.sql/java.sql=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.text=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens java.desktop/java.awt.font=ALL-UNNAMED</jvmArg>
                             </jvmArgs>
                         </configuration>
                     </plugin>
